--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "scripts": {
     "type": "module",
     "name": "full-stack-developer-server-node",
     "version": "1.0.0",
     "description": "Node.js HTTP Web server for the Tuiter application",
     "main": "index.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+      "dev": "react-scripts start",
+      "start": "serve -s build",
+      "build": "react-scripts build",
+      "test": "react-scripts test --env=jsdom",
+      "eject": "react-scripts eject",
+      "heroku-postbuild": "npm run build"
     },
     "keywords": [
       "Node",
@@ -19,5 +23,5 @@
     "dependencies": {
       "express": "^4.17.3"
     }
-  }
 }
+
