--- a/package.json
+++ b/package.json
@@ -5,12 +5,8 @@
     "description": "Node.js HTTP Web server for the Tuiter application",
     "main": "index.js",
     "scripts": {
-      "dev": "react-scripts start",
-      "start": "serve -s build",
-      "build": "react-scripts build",
-      "test": "react-scripts test --env=jsdom",
-      "eject": "react-scripts eject",
-      "heroku-postbuild": "npm run build"
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "node server.js"
     },
     "keywords": [
       "Node",
@@ -21,7 +17,10 @@
     "author": "Viet Nguyen",
     "license": "ISC",
     "dependencies": {
-      "express": "^4.17.3"
+      "axios": "^0.26.1",
+      "cors": "^2.8.5",
+      "express": "^4.17.3",
+      "nodemon": "^2.0.15"
     }
 }
 
