--- a/package.json
+++ b/package.json
@@ -5,22 +5,22 @@
     "description": "Node.js HTTP Web server for the Tuiter application",
     "main": "index.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node server.js"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js"
     },
     "keywords": [
-      "Node",
-      "REST",
-      "Server",
-      "HTTP"
+        "Node",
+        "REST",
+        "Server",
+        "HTTP"
     ],
     "author": "Viet Nguyen",
     "license": "ISC",
     "dependencies": {
-      "axios": "^0.26.1",
-      "cors": "^2.8.5",
-      "express": "^4.17.3",
-      "nodemon": "^2.0.15"
+        "axios": "^0.26.1",
+        "cors": "^2.8.5",
+        "express": "^4.17.3",
+        "mongoose": "^6.2.11",
+        "nodemon": "^2.0.15"
     }
 }
-
